# light-dataloader

./: README.md  benchmark - Google Colab.ipynb  benchmark - locally (arch).ipynb  benchmark - locally (windows).ipynb  benchmark - locally.ipynb  pyproject.toml  test_dataloader.py
.github/workflows/: python-package.yml  python-publish.yml
