[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "light-dl"
description = "Faster DataLoader for datasets that are fully loaded into memory as tensors."

version = "1.0.0"
dependencies = [
  "torch",
  "numpy",
  "more_itertools",
]
requires-python = ">= 3.9"
readme = "README.md"
authors = [
  {name = "Ivan Nikishev", email = "nkshv2@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ['dataloader']


[project.urls]
Homepage = "https://github.com/inikishev/lightdl"
Repository = "https://github.com/inikishev/lightdl"
Issues = "https://github.com/inikishev/lightdl/isses"

[tool.setuptools]
py-modules = ["lightdl"]